--- a/www/css/main.css
+++ b/www/css/main.css
@@ -268,6 +268,7 @@ h1 {
 	display: inline-block;
 	margin-right: 10px;
 	padding: 0 4px;
+	text-align: center;
 	vertical-align: top;
 	width: 315px;
 }
@@ -275,6 +276,7 @@ h1 {
 	margin-top: 15px;
 	padding: 0 10px;
 	line-height: 8px;
+	text-align: left;
 }
 .slider-l-i-content h2,
 .slider-l-i-content a {
@@ -387,4 +389,8 @@ h1 {
 .btn.store {
 	float: right;
 	margin-right: 15px;
+}
+
+.show {
+	height: 100%;
 }
